--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ path = "./src/bin/main.rs"
 test = false
 doctest = false
 bench = false
+harness = false
 
 [dependencies]
 esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
