--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,9 @@ smoltcp = { version = "0.12", default-features = false, features = [
 ] }
 static_cell = "2"
 
+ssd1306 = { version = "0.10", features = ["async", "graphics"] }
+embedded-graphics = "0.8"
+
 [profile.dev]
 opt-level = "s"
 
