--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ embassy-net = { version = "0.7", features = [
   "udp",
 ] }
 embassy-time = { version = "0.5", features = ["log"] }
+embassy-sync = "0.7"
 embedded-io = "0.6"
 embedded-io-async = "0.6"
 mqttrust = "0.6"
