feat(time): Add NTP and time sync

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,9 +29,9 @@ embassy-executor = { version = "0.7", features = [
 embassy-net = { version = "0.7", features = [
   "dhcpv4",
   "log",
-  "medium-ethernet",
   "tcp",
   "udp",
+  "dns",
 ] }
 embassy-time = { version = "0.5", features = ["log"] }
 embassy-sync = "0.7"
@@ -69,6 +69,10 @@ smoltcp = { version = "0.12", default-features = false, features = [
   "socket-tcp",
   "socket-udp",
 ] }
+sntpc = { version = "0.6", default-features = false,  features = ["embassy-socket"] }
+chrono = { version = "0.4.39", default-features = false, features = [ "alloc" ] }
+jiff = { version = "0.2", default-features = false, features = ["static"] }
+chrono-tz = { version = "0.5", default-features = false }
 static_cell = "2"
 ssd1306 = { version = "0.10", features = ["async", "graphics"] }
 embedded-graphics = "0.8"
