--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ log = "0.4"
 critical-section = "1.2"
 embassy-executor = { version = "0.7", features = [
   "log",
-  "task-arena-size-20480",
+  "task-arena-size-32768",
 ] }
 embassy-net = { version = "0.7", features = [
   "dhcpv4",
@@ -38,7 +38,8 @@ embassy-time = { version = "0.5", features = ["log"] }
 embassy-sync = "0.7"
 embedded-io = "0.6"
 embedded-io-async = "0.6"
-mqttrust = "0.6"
+rust-mqtt = { version = "0.3", default-features = false }
+
 esp-alloc = "0.8"
 heapless = "0.8"
 esp-backtrace = { version = "0.17", features = [
